--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/reactstrap": "^6.0.3",
     "bootstrap": "^4.1.3",
     "raf": "^3.3.2",
     "react": "^16.4.2",
     "react-confirm-alert": "^1.0.7",
     "react-dom": "^16.4.2",
     "react-foundation": "^0.9.2",
+    "react-html5video": "^2.5.1",
     "react-linkify": "^0.2.1",
     "react-loading": "^2.0.3",
     "react-router-dom": "^4.3.1",
