--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/reactstrap": "^6.0.3",
     "bootstrap": "^4.1.3",
+    "nodemailer": "^4.7.0",
     "raf": "^3.3.2",
     "react": "^16.4.2",
     "react-confirm-alert": "^1.0.7",
